# popn_pico

./: .gitignore  README.md  README_CN.md
BUTTON/: popn_keycap.scad
CASE/: pico_popn_case.scad  screw_spacer.scad
FIRMWARE/: CMakeLists.txt  Firmware.md
FIRMWARE/src/: CMakeLists.txt  buttons.c  buttons.h  main.c  rgb.c  rgb.h  usb_descriptors.c  usb_descriptors.h
Gen1Archive/: .gitignore  README.md
Gen1Archive/BUTTON/: popn_keycap.scad
Gen1Archive/CASE/: pico_popn_case.scad  screw_spacer.scad
Gen1Archive/FIRMWARE/: CMakeLists.txt  Firmware.md
Gen1Archive/PCB/: fp-info-cache  fp-lib-table  popn_pico.kicad_pcb  popn_pico.kicad_prl  popn_pico.kicad_pro  popn_pico.kicad_sch
Gen1Archive/PCB/3dmodels/: J 2835.step  (+1 more)
Gen1Archive/PLATE/: fp-info-cache  fp-lib-table  pico_hub75.kicad_sch  popn_pico_plate.kicad_prl  popn_pico_plate.kicad_pro
Gen1Archive/PRODUCTION/: pico_popn_case.stl  popn_keycaps.chitubox  popn_pico.uf2  screw_spacer.stl
PCB/: fp-info-cache  fp-lib-table  popn_pico.kicad_pcb  popn_pico.kicad_prl  popn_pico.kicad_pro  popn_pico.kicad_sch
PCB/3dmodels/: User Library-PTS645SL95SMTR92-LFS.STEP  User Library-WS2812-4020.step
PCB/K2-1102SP-C4SC-04.pretty/: KAN4542-0701C.kicad_mod
PCB/Popn2/: Popn Pico 2 - PCB.dxf  fp-info-cache  fp-lib-table  pop_pico2.kicad_pcb  pop_pico2.kicad_prl  pop_pico2.kicad_pro  pop_pico2.kicad_sch  pop_pico2.kicad_sym  sym-lib-table
PLATE/: fp-info-cache  fp-lib-table  popn_pico_plate.kicad_pcb  popn_pico_plate.kicad_prl  popn_pico_plate.kicad_pro
PLATE/skin.pretty/: skin_popn_button.kicad_mod  skin_popn_girl.kicad_mod  skin_popn_logo.kicad_mod  skin_popn_panel.kicad_mod  skin_popn_panel_back.kicad_mod  skin_popn_panel_cu.kicad_mod  skin_popn_panel_cu_back.kicad_mod  skin_popn_stars.kicad_mod  skin_popn_teacup.kicad_mod  skin_popn_web.kicad_mod
PRODUCTION/: pico_popn.uf2  pico_popn_case.stl  popn_keycap.stl  popn_keycaps.chitubox  screw_spacer.stl
Production/3DPrint/: Popn Pico 2 - Panel Combo.3mf  Popn Visa - Base.stl  Popn Visa - Base_Insert.stl  Popn Visa - Panel.3mf  Popn Visa - Panel_Flat.3mf  popn_pico2_base.stl  popn_pico2_button_seat.stl  popn_pico2_panel.3mf  popn_pico2_support.stl
Production/Firmware/: popn_pico2.uf2
firmware/: .gitignore  CMakeLists.txt  README.md  popn_ctrl.uf2  popn_pico.uf2
firmware/src/: CMakeLists.txt  board_defs.h  button.c  buttons.c  buttons.h  cli.c  cli.h  commands.c  commands.h  config.c  config.h  light.c  light.h  main.c  rgb.c  rgb.h  save.c  save.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
(+1630 files in other folders)
